--- a/free_dashboard.html
+++ b/free_dashboard.html
@@ -67,30 +67,30 @@
                             Market Sentiment
                         </a>
                     </li>
-                    
+
                 </ul>
 
-               
+
             </div>
-             <ul class="mb-0 float-right d-inline-flex">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="./premium.html">
-                            Go Premium
-                        </a>
-                    </li>
+            <ul class="mb-0 float-right d-inline-flex">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="./upgrade.html">
+                        Go Premium
+                    </a>
+                </li>
 
-                   <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            My Account
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Profile</a>
-                            <a class="dropdown-item" href="#">Billing & Invoices</a>
-                            <a class="dropdown-item" href="#">Support</a>
-                            <a class="dropdown-item" href="#">Log out</a>
-                        </div>
-                    </li>
-                </ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        My Account
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="#">Billing & Invoices</a>
+                        <a class="dropdown-item" href="#">Support</a>
+                        <a class="dropdown-item" href="#">Log out</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -103,7 +103,7 @@
                 <div class="row justify-content-between">
                     <div class="col-md-6 mb-3">
                         <div class="card border-0 boxshadow2">
-                            <div class="dropdown border-0 card-header py-3 px-3 show d-flex justify-content-between" >
+                            <div class="dropdown border-0 card-header py-3 px-3 show d-flex justify-content-between">
                                 <div data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                                     <span class="text-grey">
                                         Technical Analysis
@@ -124,7 +124,7 @@
                     <div class="col-md-6 mb-3">
                         <div class="boxshadow2">
                             <div class="card rounded-0 border-0">
-                                <div class=" dropdown card-header p-3 show d-flex justify-content-between" >
+                                <div class=" dropdown card-header p-3 show d-flex justify-content-between">
                                     <div data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample">
                                         <span class="text-grey">
                                             Fundamental Analysis
@@ -151,7 +151,7 @@
             <div class="container third">
                 <div class="card-deck">
                     <div class="col-md-8 p-0 card border-0  mb-4">
-                        <div class="card-header text-grey font-weight-bold" >
+                        <div class="card-header text-grey font-weight-bold">
                             Stock Updates
                         </div>
                         <div class="card-body maintainHeight">
