--- a/index.html
+++ b/index.html
@@ -31,21 +31,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav m-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
 
                 </ul>
             </div>
-            <ul class="mb-0 float-right d-inline-flex">
+            <ul class="mb-0 float-right d-inline-flex  navbar-nav">
                 <li class="nav-items mb-2 mb-md-0  mr-2">
                     <a href="./login.html" class="btn btn-outline-success px-4">
                         Login
                     </a>
                 </li>
-                <li>
-                    <a href="./sign-up.html" class="btn btn-danger px-4">
+                <li class>
+                    <a href="./select_plan.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
                 </li>
