--- a/upgrade.html
+++ b/upgrade.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Pricing | Fxmaestros </title>
+    <title>Upgrade | Fxmaestros </title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -17,14 +17,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/mine.css">
-    <!-- <link rel="stylesheet" href="./css/pricing_input.css"> -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
     <style>
-        .card p {
-            text-transform: initial !important;
-        }
-        
         .switch {
             position: relative;
             display: inline-block;
@@ -100,7 +94,7 @@
                 <ul class="navbar-nav m-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
 
@@ -112,7 +106,7 @@
                         Login
                     </a>
                 </li>
-                <li class>
+                <li>
                     <a href="./select_plan.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
@@ -123,43 +117,18 @@
 
     <!-- Trade signals-->
     <section class="page-section black2_bg text-white mt-5" id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 py-4 my-3">
-                    <p class="h1 font-weight-bold text-center">
-                        Our Pricing
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="container my-5">
-
+        <div class="section1 my-lg-5 p-0 container">
             <div class="row justify-content-center">
-                <div class="col-md-12 col-lg-10 col-xl-8">
-
-                    <div class="text-center mb-5">
-                        <span class="text-white ml-md-5 pl-md-3">Monthly</span>
-                        <label class="switch mx-2">
-                            <input type="checkbox" checked id="swith">
-                            <span class="slider round"></span>
-                        </label>
-                        <span class="text-white">Yearly (save 25%)</span>
-                    </div>
-                    <div class="card-group">
-                        <div class="card mb-5 mb-md-0 boxshadow border-0 hoverborder black1_bg">
-                            <div class="bg-success text-white card-header py-0 p-4">
-                                <p class="font-weight-bold text-center my-1">
-                                    Free
-                                </p>
-                                <p class="py-0 my-0 text-center">
-                                    <span>$</span>
-                                    <span class="h1 text-white font-weight-bold">0</span>
-                                    <span>/ Month</span>
-                                </p>
-                            </div>
-                            <div class="card-body section1 px-5 py-4 pb-5 px-4 d-flex align-items- flex-column">
-                                <div class="mb-4">
-                                    <div>
+                <div class="col-md-6">
+                    <div class="jumbotron boxshadow">
+                        <div class="row justify-content-center">
+                            <div class="col-md-11  text-white ">
+                                <div class="p-3">
+                                    <p class="h2 font-weight-bold text-center mb-4 ">
+                                        Upgrade To Fxmastero Pro
+                                    </p>
+                                    <br>
+                                    <div class="mb-3">
                                         <div class="d-flex justify-content-between">
                                             <p class="h6 bold1 mb-0 text-muted">
                                                 Real-time forex news
@@ -170,10 +139,10 @@
                                         </div>
                                         <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
                                     </div>
-                                    <div>
+                                    <div class="mb-3">
                                         <div class="d-flex justify-content-between">
                                             <p class="h6 bold1 mb-0 text-muted">
-                                                Real-time stock updates on
+                                                Real-time forex news
                                             </p>
                                             <p class="mb-0">
                                                 <i class="fa fa-check font-weight-bold text-success"></i>
@@ -181,10 +150,10 @@
                                         </div>
                                         <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
                                     </div>
-                                    <div>
+                                    <div class="mb-3">
                                         <div class="d-flex justify-content-between">
                                             <p class="h6 bold1 mb-0 text-muted">
-                                                Real-time stock updates on
+                                                Real-time forex news
                                             </p>
                                             <p class="mb-0">
                                                 <i class="fa fa-check font-weight-bold text-success"></i>
@@ -192,92 +161,39 @@
                                         </div>
                                         <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
                                     </div>
-                                </div>
-                                <div class="text-center  mt-auto">
-                                    <a href="./free_onboarding.html">
-                                        <button class="btn btn-block btn-outline-success px-3">
-                                            Select Plan
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mx-2"></div>
-                        <div class="card mb-5 mb-md-0 boxshadow border-0 black1_bg hoverborder">
-                            <div class="bg-success text-white card-header py-0 p-4">
-                                <p class="font-weight-bold text-center my-1">
-                                    Premium
-                                </p>
-                                <p class="py-0 my-0 text-center">
-                                    <span>
-                                        $
-                                    </span>
-                                    <span id="premuimPrice" class="h1 text-white font-weight-bold">75</span>
-                                    <span>/ Month</span>
-                                </p>
-                            </div>
-                            <div class="card-body section1 px-5 py-4 pb-5 px-4 d-flex align-items- flex-column">
-                                <div class="mb-4">
-                                    <!-- <div> -->
-                                    <div class="d-flex justify-content-between">
-                                        <p class="h6 bold1 mb-0 text-muted">
-                                            Real-time forex news
-                                        </p>
-                                        <p class="mb-0">
-                                            <i class="fa fa-check font-weight-bold text-success"></i>
-                                        </p>
+                                    <div class="mb-3">
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time forex news
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
                                     </div>
-                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
-                                    <div class="d-flex justify-content-between">
-                                        <p class="h6 bold1 mb-0 text-muted">
-                                            Real-time forex news
-                                        </p>
-                                        <p class="mb-0">
-                                            <i class="fa fa-check font-weight-bold text-success"></i>
-                                        </p>
+                                    <div class="mb-3">
+                                        <div class="d-flex justify-content-between">
+                                            <p class="h6 bold1 mb-0 text-muted">
+                                                Real-time forex news
+                                            </p>
+                                            <p class="mb-0">
+                                                <i class="fa fa-check font-weight-bold text-success"></i>
+                                            </p>
+                                        </div>
+                                        <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
                                     </div>
-                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
-                                    <div class="d-flex justify-content-between">
-                                        <p class="h6 bold1 mb-0 text-muted">
-                                            Real-time forex news
-                                        </p>
-                                        <p class="mb-0">
-                                            <i class="fa fa-check font-weight-bold text-success"></i>
-                                        </p>
+                                    <div class="text-center mt-md-5">
+                                        <button data-toggle="modal" data-target="#exampleModalCenterPremuim" type="submit" class="btn px-5 btn-outline-success    text-white">Pay</button>
                                     </div>
-                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
-                                    <div class="d-flex justify-content-between">
-                                        <p class="h6 bold1 mb-0 text-muted">
-                                            Real-time forex news
-                                        </p>
-                                        <p class="mb-0">
-                                            <i class="fa fa-check font-weight-bold text-success"></i>
-                                        </p>
-                                    </div>
-                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
-                                    <div class="d-flex justify-content-between">
-                                        <p class="h6 bold1 mb-0 text-muted">
-                                            Real-time forex news
-                                        </p>
-                                        <p class="mb-0">
-                                            <i class="fa fa-check font-weight-bold text-success"></i>
-                                        </p>
-                                    </div>
-                                    <hr class="mt-1 py-0 bg-dark text-muted" style="height:.003rem">
-                                    <!-- </div> -->
-                                </div>
-                                <div class="text-center  mt-auto">
-                                    <a href="./premuim_onboarding.html" to="/registerpremium">
-                                        <button class="btn btn-block btn-outline-success px-3">
-                                            Select Plan
-                                        </button>
-                                    </a>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- Footer-->
@@ -324,8 +240,37 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
-
+    <!-- Modals-->
+    <div class="modal fade shadow" id="exampleModalCenterPremuim" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title font-weight-bold text-success" id="exampleModalLongTitle">Payment Page</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-3">
+                    <div>
+                        <p class="lead text-center">
+                            Payment completed, proceed to Dashboard
+                        </p>
+                        <div class="row justify-content-center">
+                            <div class="col-md-5">
+                                <button type="button" id="paymentconfirmButton" data-dismiss="modal" class="btn btn-block btn-success">Proceed</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer d-flex justify-content-between align-items-center">
+                    <div></div>
+                    <div>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JS-->
@@ -338,14 +283,6 @@
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
-    <script>
-        AOS.init({
-            offset: 100,
-            duration: 400
-        });
-    </script> -->
     <script>
         var theSwitch = document.getElementById("swith");
         var premuimPrice = document.getElementById('premuimPrice').innerHTML;
@@ -357,6 +294,12 @@
             }
             document.getElementById('premuimPrice').innerHTML = premuimPrice
         }
+    </script>
+    <script type="text/javascript">
+        document.getElementById('paymentconfirmButton').addEventListener('click', (e) => {
+            e.preventDefault();
+            window.location.href = "/premium.html";
+        })
     </script>
 </body>
 
