--- a/select_plan.html
+++ b/select_plan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Pricing | Fxmaestros </title>
+    <title>Select Plan | Fxmaestros </title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -100,7 +100,7 @@
                 <ul class="navbar-nav m-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
 
@@ -112,7 +112,7 @@
                         Login
                     </a>
                 </li>
-                <li class>
+                <li>
                     <a href="./select_plan.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
@@ -125,15 +125,14 @@
     <section class="page-section black2_bg text-white mt-5" id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 py-4 my-3">
+                <div class="col-md-12 py-4">
                     <p class="h1 font-weight-bold text-center">
-                        Our Pricing
+                        Select Plan
                     </p>
                 </div>
             </div>
         </div>
-        <div class="container my-5">
-
+        <div class="container my-4">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10 col-xl-8">
 
