--- a/sign-up-premium.html
+++ b/sign-up-premium.html
@@ -56,48 +56,35 @@
         </div>
     </nav>
 
-    <section class="page-section  black1_bg text-white">
-        <div class="black1_bg py-5 mt-4">
-            <div class="row no-gutters justify-content-center align-content-end">
-                <div class="col-md-5 d-none bg-success" style="background-image:url('./assets/img/sections/register-image.jpg'); background-repeat: no-repeat; background-size: cover;">
-                    <div class="flex-even  d-none d-md-block">
-                        <div class="row py-5 justify-content-center">
-                            <div class="col-md-9 py-5 text-white">
-                                <br>
-                                <div class="">
-                                    <p class="h2 font-weight-bold mb-5 ">
-                                        Welcome to FXMastero
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <section class="page-section  black2_bg text-white">
+        <div class="black2_bg py-5 mt-4">
+            <div class="row no-gutters justify-content-center mt-md-5 align-content-end">
+
                 <div class="col-md-5">
-                    <div class="flex-even py-5 bg-white">
+                    <div class=" bg-white">
                         <div class="row py-md-5 justify-content-center">
                             <div class="col-md-9 px-4 px-md-0">
                                 <div class=" text-dark">
                                     <div class="">
                                         <p class="h2 text-center font-weight-bold mb-3">
-                                            Sign up
+                                            Complete Sign-up
                                         </p>
 
-                                        <form id="onlyForm">
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Email address</label>
-                                                <input @change="welcome" v-model="email" required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                        <form id="makepayment">
+                                            <div class="mb-3">
+                                                <input required type="email" class="form-control" placeholder="Email">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Phone Number</label>
-                                                <input @change="welcome" v-model="phone" required type="mobile" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
+                                            <div class="mb-3">
+                                                <input required type="number" class="form-control" placeholder="Phone Number">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Password</label>
-                                                <input @change="welcome" v-model="password" required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                            <div class="mb-3">
+                                                <input required type="password" placeholder="password" class="form-control">
                                             </div>
-
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Sign Up</button>
+                                            <div class="row justify-content-center my-3">
+                                                <div class="col-md-6">
+                                                    <button style="background-color: green;" class=" btn btn-block btn-success">Make Payment</button>
+                                                </div>
+                                            </div>
                                         </form>
                                         <p class="mt-3 text-center">
                                             <span class="text-danger">
@@ -121,13 +108,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
     </section>
 
     <!-- Footer-->
@@ -174,8 +154,26 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
-
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Paystack Payment</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Payment method would show here
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" id="paymentconfirmButton" data-dismiss="modal" class="btn btn-success">Complete Payment</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JS-->
@@ -188,18 +186,15 @@
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
-    <script>
-        AOS.init({
-            offset: 100,
-            duration: 400
-        });
-    </script> -->
-    <script>
-        document.getElementById('onlyForm').addEventListener('submit', (e) => {
+    <script type="text/javascript">
+        document.getElementById("makepayment").addEventListener('submit', (e) => {
             e.preventDefault();
-            window.location.href = "/free_dashboard.html";
+            $('#exampleModalCenter').modal('show');
+        })
+        document.getElementById('paymentconfirmButton').addEventListener('click', (e) => {
+            e.preventDefault();
+            window.location.href = "/premium.html";
+
         })
     </script>
 </body>
